# emb-class

./: .gitignore
STM32/lesson-26/: .cproject
STM32/lesson-38-uart-master/: .mxproject  .project  lesson-38.ioc  lesson-38.launch
cmake-template/: CMakeLists.txt  sdkconfig
lesson-14/: platformio.ini
lesson-17/: platformio.ini
lesson-18/: platformio.ini
lesson-21/: platformio.ini
lesson-22-espidf/: .clangd  CMakeLists.txt
lesson-22-espidf/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  common.h  handler_base.cpp  handler_base.hpp  no_debounce.cpp  no_debounce.hpp  state_based.cpp  state_based.hpp  time_based.cpp  time_based.hpp
lesson-25-traffic-light/: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
lesson-28-adc-cal/: .clangd  .gitignore  CMakeLists.txt  sdkconfig
lesson-30-ledc/: CMakeLists.txt  sdkconfig  sdkconfig.old
lesson-31-buzzer/: CMakeLists.txt  sdkconfig  sdkconfig.old
lesson-31-buzzer-2/: CMakeLists.txt  freq_table.ods  sdkconfig  sdkconfig.old
lesson-31-buzzer-2/main/: CMakeLists.txt  Kconfig.projbuild  MelodyPlayer.cpp  MelodyPlayer.h  app_main.cpp  common.h  idf_component.yml
lesson-33-encoder+led/: CMakeLists.txt  sdkconfig  sdkconfig.old
lesson-38-uart-slave/: CMakeLists.txt  Readme.txt  sdkconfig  sdkconfig.old
lesson-38-uart-slave/main/: CMakeLists.txt  Calculator.cpp  Calculator.h  Kconfig.projbuild  S7_Display.cpp  S7_Display.h  UartReceiver.cpp  UartReceiver.h  app_main.cpp  common.h
lesson-39-i2c-oled/: .clangd  .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
(+98 files in other folders)
